Added Validation in New Tickets

--- a/app/templates/new_ticket.html
+++ b/app/templates/new_ticket.html
@@ -438,6 +438,7 @@
                           name="ticket_site_id"
                           class="form-control"
                           placeholder="Enter Site ID"
+                          required
                         />
                       </div>
                     </div>
@@ -451,6 +452,7 @@
                           name="ticket_po_number"
                           class="form-control"
                           placeholder="Enter PO Number"
+                          required
                         />
                       </div>
                     </div>
@@ -488,6 +490,7 @@
                           name="hours_to_add"
                           class="form-control"
                           placeholder="Enter Ticket Expires After (Hours)"
+                          required
                         />
                       </div>
                     </div>
@@ -503,6 +506,7 @@
                           cols="30"
                           rows="4"
                           class="form-control"
+                          required
                         ></textarea>
                       </div>
                     </div>
@@ -521,6 +525,7 @@
                             name="ticket_planned_visit_date"
                             class="form-control pull-right"
                             id="datepicker1"
+                            required
                           />
                         </div>
                       </div>
@@ -537,6 +542,7 @@
                             name="ticket_actual_visit_date"
                             class="form-control pull-right"
                             id="datepicker2"
+                            required
                           />
                         </div>
                       </div>
