--- a/app/templates/edit_user.html
+++ b/app/templates/edit_user.html
@@ -97,10 +97,10 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image">
-            <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
+            <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image" />
           </div>
           <div class="pull-left info">
-            <p>{{currentUser[3]}}</p>
+            <p>{{ currentUser[3] }}</p>
             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
           </div>
         </div>
@@ -112,10 +112,10 @@
               <i class="fa fa-dashboard"></i> <span>Dashboard</span>
             </a>
           </li>
+          {% if currentUser[29] ==0:%}
           <li class="treeview">
             <a href="#">
-              <i class="fa fa-hacker-news"></i>
-              <span>New</span>
+              <i class="fa fa-hacker-news"></i> <span>New</span>
               <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
                 <small class="label pull-right bg-green">new</small>
@@ -123,24 +123,38 @@
             </a>
             <ul class="treeview-menu">
               {% if currentUser[9] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_users') }}"><i class="fa fa-circle-o"></i> Add New User</a></li>
+              <li>
+                <a href="{{ url_for('new_users') }}"><i class="fa fa-circle-o"></i> Add New User</a>
+              </li>
               {%endif%} {% if currentUser[13] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_ticket') }}"><i class="fa fa-circle-o"></i> Add New Ticket</a></li>
+              <li>
+                <a href="{{ url_for('new_ticket') }}"><i class="fa fa-circle-o"></i> Add New Ticket</a>
+              </li>
               {%endif%} {% if currentUser[23] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_customer') }}"><i class="fa fa-circle-o"></i> Add New Customer</a></li>
+              <li>
+                <a href="{{ url_for('new_customer') }}"><i class="fa fa-circle-o"></i> Add New Customer</a>
+              </li>
               {%endif%} {% if currentUser[24] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_engineer') }}"><i class="fa fa-circle-o"></i> Add New Engineer</a></li>
+              <li>
+                <a href="{{ url_for('new_engineer') }}"><i class="fa fa-circle-o"></i> Add New Engineer</a>
+              </li>
               {%endif%} {% if currentUser[25] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a></li>
+              <li>
+                <a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a>
+              </li>
               {%endif%} {% if currentUser[26] ==0:%} {% else:%}
-              <li><a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a></li>
+              <li>
+                <a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a>
+              </li>
               {%endif%}
             </ul>
           </li>
+          {% else:%}
+          {%endif%}
+          {% if currentUser[29] == 0:%}
           <li class="treeview">
             <a href="#">
-              <i class="fa fa-street-view"></i>
-              <span>Views</span>
+              <i class="fa fa-street-view"></i> <span>Views</span>
               <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
                 <small class="label pull-right bg-primary">views</small>
@@ -148,64 +162,121 @@
             </a>
             <ul class="treeview-menu">
               {% if currentUser[16] ==1:%}
-              <li><a href="/view_all_tickets"><i class="fa fa-circle-o"></i> All Tickets</a></li>
-              <li><a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> Open Tickets</a></li>
-              <li><a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a></li>
-              <li><a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a></li>
-              <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
-              <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
-              <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
-              <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
+              <li>
+                <a href="/view_all_tickets"><i class="fa fa-circle-o"></i> All Tickets</a>
+              </li>
+              <li>
+                <a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> Open Tickets</a>
+              </li>
+              <li>
+                <a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a>
+              </li>
+              <li>
+                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a>
+              </li>
+              <li>
+                <a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a>
+              </li>
+              <li>
+                <a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a>
+              </li>
+              <li>
+                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
+              </li>
+              <li>
+                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+              </li>
               {% else:%} {% if currentUser[13] ==1:%}
-              <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
-              <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
-              <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
-              <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
+              <li>
+                <a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a>
+              </li>
+              <li>
+                <a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a>
+              </li>
+              <li>
+                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
+              </li>
+              <li>
+                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+              </li>
               {% else:%} {%endif%} {%endif%}
             </ul>
           </li>
+          {%else:%}
+          <li class="treeview">
+            <a href="#">
+              <i class="fa fa-street-view"></i> <span>Views</span>
+              <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+                <small class="label pull-right bg-primary">views</small>
+              </span>
+            </a>
+            <ul class="treeview-menu">
+              <li>
+                <a href="/view_all_tickets"><i class="fa fa-circle-o"></i> My Tickets</a>
+              </li>
+              <li>
+                <a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a>
+              </li>
+              <li>
+                <a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
+              </li>
+              <li>
+                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+              </li>
+            </ul>
+          </li>
+          {%endif%}
           <li class="">
             <a href="{{ url_for('view_all_tickets') }}">
               <i class="fa fa-ticket"></i> <span>Tickets</span>
             </a>
           </li>
           {% if currentUser[23] ==0:%}
+          {% if currentUser[29] ==0:%}
           <li class="">
             <a href="/robot">
               <i class="fa fa-user-o"></i> <span>Customers</span>
             </a>
-
           </li>
           {% else:%}
+          {%endif%}
+
+          {% else:%}
+          {% if currentUser[29] ==0:%}
           <li class="">
             <a href="/all_clients">
               <i class="fa fa-user-o"></i> <span>Customers</span>
             </a>
-
           </li>
           <li class="">
             <a href="/all_engineers">
               <i class="fa fa-user-o"></i> <span>Engineers</span>
             </a>
-
           </li>
           <li class="">
             <a href="/all_users">
               <i class="fa fa-user-o"></i> <span>System Users</span>
             </a>
-
           </li>
+          {% else:%}
+          {%endif%}
           {% endif%}
           <li class="">
             <a href="/tasks">
               <i class="fa fa-tasks"></i> <span>Tasks</span>
             </a>
           </li>
+          {% if currentUser[29] == 0:%}
           <li class="">
             <a href="/reports">
               <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
             </a>
           </li>
+          {%else:%}
+          {%endif%}
+
+
           {% if currentUser[13] ==0:%}
           <li class="">
             <a href="/robot">
@@ -213,11 +284,14 @@
             </a>
           </li>
           {% else:%}
+          {% if currentUser[29] ==0:%}
           <li class="">
             <a href="{{ url_for('new_ticket') }}">
               <i class="fa fa-ticket"></i> <span>Open Tickets</span>
             </a>
           </li>
+          {% else:%}
+          {%endif%}
           {% endif%}
           <li>
             <a href="pages/calendar.html">
