--- a/app/templates/our_clients.html
+++ b/app/templates/our_clients.html
@@ -66,13 +66,13 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="user-image" alt="User Image" />
+                <img src="{{ url_for('static',filename='dist/img/NCR.png') }}" class="user-image" alt="User Image" />
                 <span class="hidden-xs">{{ currentUser[3] }}</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-                  <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image" />
+                  <img src="{{ url_for('static',filename='dist/img/NCR.png') }}" class="img-circle" alt="User Image" />
 
                   <p>
                     {{ currentUser[3] }} - ({{ currentUser[1] }}
@@ -85,7 +85,7 @@
                     <a href="/profile" class="btn bg-purple btn-flat">Profile</a>
                   </div>
                   <div class="pull-right">
-                    <a href="#" class="btn bg-maroon btn-flat">Sign out</a>
+                    <a href="/login" class="btn bg-maroon btn-flat">Sign out</a>
                   </div>
                 </li>
               </ul>
@@ -101,7 +101,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image">
-            <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image" />
+            <img src="{{ url_for('static',filename='dist/img/NCR.png') }}" class="img-circle" alt="User Image" />
           </div>
           <div class="pull-left info">
             <p>{{ currentUser[3] }}</p>
@@ -144,11 +144,13 @@
               </li>
               {%endif%} {% if currentUser[25] ==0:%} {% else:%}
               <li>
-                <a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a>
+                <a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New
+                  Equipment</a>
               </li>
               {%endif%} {% if currentUser[26] ==0:%} {% else:%}
               <li>
-                <a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a>
+                <a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work
+                  Order</a>
               </li>
               {%endif%}
             </ul>
@@ -176,7 +178,8 @@
                 <a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a>
               </li>
               <li>
-                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a>
+                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue
+                  Tickets</a>
               </li>
               <li>
                 <a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a>
@@ -185,10 +188,12 @@
                 <a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a>
               </li>
               <li>
-                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
+                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed
+                  Tickets</a>
               </li>
               <li>
-                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My
+                  Overdue Tickets</a>
               </li>
               {% else:%} {% if currentUser[13] ==1:%}
               <li>
@@ -198,10 +203,12 @@
                 <a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a>
               </li>
               <li>
-                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
+                <a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed
+                  Tickets</a>
               </li>
               <li>
-                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+                <a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My
+                  Overdue Tickets</a>
               </li>
               {% else:%} {%endif%} {%endif%}
             </ul>
@@ -226,7 +233,8 @@
                 <a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a>
               </li>
               <li>
-                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a>
+                <a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue
+                  Tickets</a>
               </li>
             </ul>
           </li>
@@ -259,6 +267,11 @@
             </a>
           </li>
           <li class="">
+            <a href="/all_equipments">
+              <i class="fa fa-ticket"></i> <span>Equipments</span>
+            </a>
+          </li>
+          <li class="">
             <a href="/all_users">
               <i class="fa fa-user-o"></i> <span>System Users</span>
             </a>
@@ -282,11 +295,14 @@
 
 
           {% if currentUser[13] ==0:%}
+          {% if currentUser[29] ==0:%}
           <li class="">
             <a href="/robot">
               <i class="fa fa-ticket"></i> <span>Open Tickets</span>
             </a>
           </li>
+          {% else:%}
+          {%endif%}
           {% else:%}
           {% if currentUser[29] ==0:%}
           <li class="">
@@ -298,7 +314,7 @@
           {%endif%}
           {% endif%}
           <li>
-            <a href="pages/calendar.html">
+            <a href="#">
               <i class="fa fa-calendar"></i> <span>Calendar</span>
               <span class="pull-right-container">
                 <small class="label pull-right bg-red">3</small>
